--- a/ERP/.env
+++ b/ERP/.env
@@ -7,7 +7,8 @@ ACCOUNT_ALLOW_SIGNUP=0
 # Use PostgreSQL in dev (production-like)
 USE_SQLITE=0
 # PostgreSQL connection details
-PGDATABASE=himalytix
+# PGDATABASE=himalytix
+PGDATABASE=himalytixdb
 PGUSER=postgres
 PGPASSWORD=123
 PGHOST=localhost
