html reporting app

--- a/ERP/.env
+++ b/ERP/.env
@@ -4,6 +4,8 @@ SECURE_SSL_REDIRECT=0
 SESSION_COOKIE_SECURE=0
 CSRF_COOKIE_SECURE=0
 ACCOUNT_ALLOW_SIGNUP=0
+# Enable drag-and-drop custom reporting
+ENABLE_CUSTOM_REPORTS=1
 # Use PostgreSQL in dev (production-like)
 USE_SQLITE=0
 # PostgreSQL connection details
@@ -15,3 +17,5 @@ PGHOST=localhost
 PGPORT=5433
 # Use local memory cache to avoid needing Redis in development
 USE_LOC_MEM_CACHE=1
+
+TIME_ZONE = "Asia/Kathmandu"
