--- a/ERP/.env.example
+++ b/ERP/.env.example
@@ -149,6 +149,13 @@ ENABLE_DEBUG_TOOLBAR=False
 # TEST_DB_NAME=test_erpdb
 
 # -----------------------------------------------------------------------------
+# REPORTING
+# -----------------------------------------------------------------------------
+
+# Enable drag-and-drop custom report templates
+ENABLE_CUSTOM_REPORTS=True
+
+# -----------------------------------------------------------------------------
 # THIRD-PARTY INTEGRATIONS
 # -----------------------------------------------------------------------------
 
